// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton Should render LinkButton Default 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon and IconPosition end 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
    <svg
      class="fill-solid-slate-50"
      height="22"
      role="img"
      viewBox="0 0 18 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          d="M13.156 13.438c.438-.042.688-.292.75-.75-.062-.459-.312-.709-.75-.75-.458.041-.708.291-.75.75.042.458.292.708.75.75Zm-8.312 0c.458-.042.708-.292.75-.75-.042-.459-.292-.709-.75-.75-.438.041-.688.291-.75.75.062.458.312.708.75.75Zm8.562-4.532a8.731 8.731 0 0 1 3.156 2.938C17.375 13.052 17.855 14.438 18 16H0c.146-1.563.625-2.948 1.438-4.156a8.731 8.731 0 0 1 3.156-2.938l-1.5-2.594A.336.336 0 0 1 3.063 6a.307.307 0 0 1 .28-.156c.126 0 .22.052.282.156l1.531 2.656A9.136 9.136 0 0 1 9 7.812c1.333 0 2.615.282 3.844.844L14.375 6a.307.307 0 0 1 .281-.156c.125 0 .219.052.281.156a.336.336 0 0 1-.03.313l-1.5 2.593Z"
          fill-opacity="0.72"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h18v24H0z"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon and IconPosition end and fullWidth 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
    <svg
      class="fill-solid-slate-50"
      height="22"
      role="img"
      viewBox="0 0 18 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          d="M13.156 13.438c.438-.042.688-.292.75-.75-.062-.459-.312-.709-.75-.75-.458.041-.708.291-.75.75.042.458.292.708.75.75Zm-8.312 0c.458-.042.708-.292.75-.75-.042-.459-.292-.709-.75-.75-.438.041-.688.291-.75.75.062.458.312.708.75.75Zm8.562-4.532a8.731 8.731 0 0 1 3.156 2.938C17.375 13.052 17.855 14.438 18 16H0c.146-1.563.625-2.948 1.438-4.156a8.731 8.731 0 0 1 3.156-2.938l-1.5-2.594A.336.336 0 0 1 3.063 6a.307.307 0 0 1 .28-.156c.126 0 .22.052.282.156l1.531 2.656A9.136 9.136 0 0 1 9 7.812c1.333 0 2.615.282 3.844.844L14.375 6a.307.307 0 0 1 .281-.156c.125 0 .219.052.281.156a.336.336 0 0 1-.03.313l-1.5 2.593Z"
          fill-opacity="0.72"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h18v24H0z"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon and IconPosition end and fullWidth and isLoading 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-wait w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
    <svg
      class="fill-solid-slate-50"
      height="22"
      role="img"
      viewBox="0 0 18 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          d="M13.156 13.438c.438-.042.688-.292.75-.75-.062-.459-.312-.709-.75-.75-.458.041-.708.291-.75.75.042.458.292.708.75.75Zm-8.312 0c.458-.042.708-.292.75-.75-.042-.459-.292-.709-.75-.75-.438.041-.688.291-.75.75.062.458.312.708.75.75Zm8.562-4.532a8.731 8.731 0 0 1 3.156 2.938C17.375 13.052 17.855 14.438 18 16H0c.146-1.563.625-2.948 1.438-4.156a8.731 8.731 0 0 1 3.156-2.938l-1.5-2.594A.336.336 0 0 1 3.063 6a.307.307 0 0 1 .28-.156c.126 0 .22.052.282.156l1.531 2.656A9.136 9.136 0 0 1 9 7.812c1.333 0 2.615.282 3.844.844L14.375 6a.307.307 0 0 1 .281-.156c.125 0 .219.052.281.156a.336.336 0 0 1-.03.313l-1.5 2.593Z"
          fill-opacity="0.72"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h18v24H0z"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon and IconPosition end and fullWidth and isLoading and className=custom-class 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-wait w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300 opacity-50"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
    <svg
      class="fill-solid-slate-50"
      height="22"
      role="img"
      viewBox="0 0 18 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          d="M13.156 13.438c.438-.042.688-.292.75-.75-.062-.459-.312-.709-.75-.75-.458.041-.708.291-.75.75.042.458.292.708.75.75Zm-8.312 0c.458-.042.708-.292.75-.75-.042-.459-.292-.709-.75-.75-.438.041-.688.291-.75.75.062.458.312.708.75.75Zm8.562-4.532a8.731 8.731 0 0 1 3.156 2.938C17.375 13.052 17.855 14.438 18 16H0c.146-1.563.625-2.948 1.438-4.156a8.731 8.731 0 0 1 3.156-2.938l-1.5-2.594A.336.336 0 0 1 3.063 6a.307.307 0 0 1 .28-.156c.126 0 .22.052.282.156l1.531 2.656A9.136 9.136 0 0 1 9 7.812c1.333 0 2.615.282 3.844.844L14.375 6a.307.307 0 0 1 .281-.156c.125 0 .219.052.281.156a.336.336 0 0 1-.03.313l-1.5 2.593Z"
          fill-opacity="0.72"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h18v24H0z"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with Icon and IconPosition start 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <svg
      class="fill-solid-slate-50"
      height="22"
      role="img"
      viewBox="0 0 18 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          d="M13.156 13.438c.438-.042.688-.292.75-.75-.062-.459-.312-.709-.75-.75-.458.041-.708.291-.75.75.042.458.292.708.75.75Zm-8.312 0c.458-.042.708-.292.75-.75-.042-.459-.292-.709-.75-.75-.438.041-.688.291-.75.75.062.458.312.708.75.75Zm8.562-4.532a8.731 8.731 0 0 1 3.156 2.938C17.375 13.052 17.855 14.438 18 16H0c.146-1.563.625-2.948 1.438-4.156a8.731 8.731 0 0 1 3.156-2.938l-1.5-2.594A.336.336 0 0 1 3.063 6a.307.307 0 0 1 .28-.156c.126 0 .22.052.282.156l1.531 2.656A9.136 9.136 0 0 1 9 7.812c1.333 0 2.615.282 3.844.844L14.375 6a.307.307 0 0 1 .281-.156c.125 0 .219.052.281.156a.336.336 0 0 1-.03.313l-1.5 2.593Z"
          fill-opacity="0.72"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h18v24H0z"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with variant=primary 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with variant=secondary 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer border-75 text-solid-coral-700 enabled:hover:bg-solid-coral-100 enabled:active:bg-solid-coral-200 border-solid-coral-700 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;

exports[`LinkButton Should render LinkButton with variant=tertiary 1`] = `
<div>
  <a
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer underline text-solid-coral-700 enabled:hover:bg-solid-coral-100 enabled:active:bg-solid-coral-200 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </a>
</div>
`;
